force-app/main/default/objects/ApplicationConfiguration__c/ApplicationConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Application Configuration</label>
</CustomObject>