force-app/main/default/objects/ApplicationConfiguration__c/fields/AllowedOtpMode__c.field-meta.xml
<CustomField>
    <fullName>AllowedOtpMode__c</fullName>
    <description>Allowed different OTP veriifcation</description>
    <inlineHelpText>Enter value by comma seperated, Ex SMS;EMAIL</inlineHelpText>
    <label>Allowed Otp Mode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>