force-app/main/default/objects/ApplicationConfiguration__c/fields/AppSequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>AppSequenceNumber__c</fullName>
    <description>Application Sequence Number</description>
    <label>Application Sequence Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>