force-app/main/default/objects/ApplicationConfiguration__c/fields/CountyNames__c.field-meta.xml
<CustomField>
    <fullName>CountyNames__c</fullName>
    <description>List of county names eligible to start an application</description>
    <label>County Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>