force-app/main/default/objects/ApplicationConfiguration__c/fields/CustomerLogs__c.field-meta.xml
<CustomField>
    <fullName>CustomerLogs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Log all customer logs?</description>
    <label>Customer Logs</label>
    <type>Checkbox</type>
</CustomField>