force-app/main/default/objects/ApplicationConfiguration__c/fields/DebugLogs__c.field-meta.xml
<CustomField>
    <fullName>DebugLogs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debug Logs</label>
    <type>Checkbox</type>
</CustomField>