force-app/main/default/objects/ApplicationConfiguration__c/fields/EmailLinkExpirationTime__c.field-meta.xml
<CustomField>
    <fullName>EmailLinkExpirationTime__c</fullName>
    <description>Email Link Expiration Time in hour</description>
    <label>Email Link Expiration Time In Hour</label>
    <type>Number</type>
    <scale>0</scale>
    <precision>4</precision>
</CustomField>