force-app/main/default/objects/ApplicationConfiguration__c/fields/FinancialInstituteAccountId__c.field-meta.xml
<CustomField>
    <fullName>FinancialInstituteAccountId__c</fullName>
    <description>Acount ID of Financial Institute</description>
    <label>Financial Institute Account Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>