force-app/main/default/objects/ApplicationConfiguration__c/fields/IntegrationsLogs__c.field-meta.xml
<CustomField>
    <fullName>IntegrationsLogs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrations logs</label>
    <type>Checkbox</type>
</CustomField>