force-app/main/default/objects/ApplicationConfiguration__c/fields/MaxNumberofProductSelected__c.field-meta.xml
<CustomField>
    <fullName>MaxNumberofProductSelected__c</fullName>
    <description>This defines how many number of product can be selected in the product selection page</description>
    <label>MaxNumberofProductSelected</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>