force-app/main/default/objects/ApplicationConfiguration__c/fields/OOWNumberofAnswer__c.field-meta.xml
<CustomField>
    <fullName>OOWNumberofAnswer__c</fullName>
    <description>Number of answer to be given by the customer</description>
    <label>OOWNumberofAnswer</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>