force-app/main/default/objects/ApplicationConfiguration__c/fields/OOWPassThreshhold__c.field-meta.xml
<CustomField>
    <fullName>OOWPassThreshhold__c</fullName>
    <description>Pass percentage threshhold</description>
    <label>OOW Pass Threshhold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>