force-app/main/default/objects/ApplicationConfiguration__c/fields/OOWTotalQuestionsToShow__c.field-meta.xml
<CustomField>
    <fullName>OOWTotalQuestionsToShow__c</fullName>
    <description>Number of questions to be displayed in UI</description>
    <label>OOW Total Questions To Show</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>