force-app/main/default/objects/ApplicationConfiguration__c/fields/OTPExpirationTime__c.field-meta.xml
<CustomField>
    <fullName>OTPExpirationTime__c</fullName>
    <description>OTP Expiration Time</description>
    <label>OTPExpirationTime</label>
    <type>Number</type>
    <scale>0</scale>
    <precision>4</precision>
</CustomField>