force-app/main/default/objects/ApplicationConfiguration__c/fields/OTPMaxAllowedAttempts__c.field-meta.xml
<CustomField>
    <fullName>OTPMaxAllowedAttempts__c</fullName>
    <description>Max attempts allowed for OTP verification</description>
    <label>OTPMaxAllwedAttempts</label>
    <type>Number</type>
    <scale>0</scale>
    <precision>4</precision>
</CustomField>