force-app/main/default/objects/ApplicationConfiguration__c/fields/PackageVersion__c.field-meta.xml
<CustomField>
    <fullName>PackageVersion__c</fullName>
    <description>Package Version</description>
    <label>Package Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>