force-app/main/default/objects/ApplicationConfiguration__c/fields/ReferralUrlExpirationTime__c.field-meta.xml
<CustomField>
    <fullName>ReferralUrlExpirationTime__c</fullName>
    <description>Referral Email Link Expiration Time in hour</description>
    <label>Referral URl Expiration Time In Hour</label>
    <type>Number</type>
    <scale>0</scale>
    <precision>4</precision>
</CustomField>