force-app/main/default/objects/ApplicationConfiguration__c/fields/SessionExpirationTime__c.field-meta.xml
<CustomField>
    <fullName>SessionExpirationTime__c</fullName>
    <description>Session Expiration Time in Mintues</description>
    <label>Session Expiration Time in Mintues</label>
    <required>true</required>
    <type>Number</type>
    <scale>0</scale>
    <precision>4</precision>
</CustomField>