force-app/main/default/objects/ApplicationConfiguration__c/fields/SiteUrl__c.field-meta.xml
<CustomField>
    <fullName>SiteUrl__c</fullName>
    <description>URL to the site where application process starts</description>
    <label>Site URL</label>
    <type>Url</type>
</CustomField>