force-app/main/default/objects/ApplicationConfiguration__c/fields/SupportedFileTypes__c.field-meta.xml
<CustomField>
    <fullName>SupportedFileTypes__c</fullName>
    <description>Supported file extension names</description>
    <label>SupportedFileTypes</label>
    <length>40</length>
    <type>Text</type>
</CustomField>