force-app/main/default/objects/ApplicationConfiguration__c/fields/SupportTeamEmail__c.field-meta.xml
<CustomField>
    <fullName>SupportTeamEmail__c</fullName>
    <description>Email address of institute support team</description>
    <label>Support Team Email</label>
    <type>Email</type>
</CustomField>