force-app/main/default/objects/ApplicationConfiguration__c/fields/UiStaticResourceName__c.field-meta.xml
<CustomField>
    <fullName>UiStaticResourceName__c</fullName>
    <description
  >Static Resource Name Need to Be rendered for pages</description>
    <label>Ui Static Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>